infrastructure/authentik/manifests/middleware.yml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: set-https-header
  namespace: authentik
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Proto: https
