infrastructure/authentik/manifests/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: authentik
  namespace: authentik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`auth.torsteinbo.net`)
      kind: Rule
      services:
        - name: authentik-server
          port: 9000
